feat(board): Added feature to configure board columns
